--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,67 @@
 
     
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 
     <!-- Import FawryPay CSS Library-->
     <link rel="stylesheet" href="https://atfawry.fawrystaging.com/atfawry/plugin/assets/payments/css/fawrypay-payments.css">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <!-- Font Awesome CSS -->
+    <script src="https://kit.fontawesome.com/5135d630a7.js" crossorigin="anonymous"></script>
 
 
+    <style>
+      .notification {
+          background-color: #0d6efd;
+          color: white;
+          text-decoration: none;
+          padding: 4px 24px;
+          margin-right: 20px;
+          margin-left: 20px;
+          position: relative;
+          display: inline-block;
+          border-radius: 2px;
+          font-size: 20px;
+      }
+
+      .notification:hover {
+          background: #0b5ed7;
+          color: #fff;
+      }
+
+      .notification .badge {
+          position: absolute;
+          top: -10px;
+          right: -10px;
+          padding: 8px 8px;
+          border-radius: 50%;
+          background: red;
+          color: white;
+      }
+
+      .notification-section .dropdown-toggle::after {
+          content: none;
+      }
+
+      .dropdown-toggle::after {
+          color: #fff;
+      }
+
+      #notifications-dropdown li {
+          max-width: 500px;
+          word-wrap: break-word;
+          display: inline-block;
+          white-space: normal;
+      }
+
+      #notifications-dropdown.dropdown-menu {
+          width: 15rem;
+      }
+      
+  </style>
 
     
   </head>
@@ -43,6 +97,35 @@
 <!-- Import FawryPay Staging JavaScript Library-->
 <script type="text/javascript" src="https://atfawry.fawrystaging.com/atfawry/plugin/assets/payments/js/fawrypay-payments.js"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+{{ room_name|json_script:"room-name" }}
+<script>
+    const roomName = JSON.parse(document.getElementById('room-name').textContent);
+
+    const notificationSocket = new WebSocket(
+        'ws://'
+        + window.location.host
+        + '/ws/notification/'
+        + roomName
+        + '/'
+    );
+
+    notificationSocket.onmessage = function(e) {
+        const data = JSON.parse(e.data);
+        //document.querySelector('#chat-log').value += (data.message + '\n');
+        console.log(data);
+        document.getElementById("notifications-dropdown").innerHTML = "<li class='dropdown-item'>" + data + "</li><hr class='dropdown-divider'>" + document.getElementById("notifications-dropdown").innerHTML;
+        document.getElementById("notification-badge").innerHTML = parseInt(document.getElementById("notification-badge").innerHTML) + 1;
+    };
+
+    notificationSocket.onclose = function(e) {
+        console.error('Chat socket closed unexpectedly');
+    };
+
+  
+
+   
+</script>
 
       
   </body>
