--- a/templates/cart.html
+++ b/templates/cart.html
@@ -12,6 +12,22 @@
       <li class="nav-item"><a href="{% url 'home' %}" class="nav-link  text-white" aria-current="page">Home</a></li>
       <li class="nav-item"><a href="{% url 'order_summary' %}" class=" active nav-link text-white">Cart</a></li>
       <li class="nav-item"><a href="accounts/logout" class="nav-link text-white">Log Out</a></li>
+      <li class="nav-item dropdown notification-section">
+        <a href="#" class="notification dropdown-toggle" id="navbarDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="true">
+            <span><i class='fa fa-bell'></i></span>
+            <span class="badge" id="notification-badge">{{ notifications | length }}</span>
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="notifications-dropdown"
+            data-popper-placement="bottom-end"
+            style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(-70px, 42px, 0px);">
+          
+          {% for i in notifications %}
+            <li class="dropdown-item">{{i.message}}</li>
+            <hr class="dropdown-divider">
+          {% endfor %}
+        </ul>
+    </li>
     </ul>
   </div>
 </div>
